[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegisai-guard"
version = "0.1.0"
description = "Standalone LLM prompt injection guard — extracted from the AegisAI platform"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [{ name = "Sarthak Doshi", email = "sarthak@example.com" }]
keywords = ["llm", "prompt-injection", "ai-security", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

# TODO (help wanted): pin exact versions from backend/requirements.txt
dependencies = [
    "torch>=2.0",
    "transformers>=4.37",
    "numpy>=1.24",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/SdSarthak/AegisAI"
Repository = "https://github.com/SdSarthak/AegisAI"

# TODO (high priority — publish):
#   1. Run `pip install hatch`
#   2. Run `hatch build` to produce dist/
#   3. Run `hatch publish` to upload to PyPI
#   4. Add a GitHub Actions workflow at .github/workflows/publish-guard-sdk.yml
#      that triggers on `push --tags v*` and runs the above commands.
